# ghastbook-sqlx

./: .env  Cargo.toml  README.md
.sqlx/: query-422880d1b97eb828c7274c06bd5b7e71490bae8403b0173ea16c1bee42290328.json  query-a69fbaba2ac60a658e7a273989ccc864f0084f00e6e00d2d26de4d90e87fbe47.json  query-f0c5d2eb290cb0d5df8a19d216c0d0a7693659c9d73065f6825dbba78dcb9287.json
migrations/: 20240203024053_creation.sql  20240215062330_count-non-null.sql
src/: main.rs
