[package]
name = "ghastbook-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
axum = { version = "0.7.4" }
